--- a/space/templates/map.html
+++ b/space/templates/map.html
@@ -79,5 +79,7 @@
         </h4>
         <h3>Probabilités d'ouverture</h3>
         {% include "opening_d3.html" %}
+	<br>
+	<video src="static/vid/urlab.mp4" width='100%' controls></video>
     </div>
 </div>
