Keep UrLab.be superfast

--- a/space/templates/map.html
+++ b/space/templates/map.html
@@ -80,6 +80,6 @@
         <h3>Probabilités d'ouverture</h3>
         {% include "opening_d3.html" %}
 	<br>
-	<video src="static/vid/urlab.mp4" width='100%' controls></video>
+	<video src="static/vid/urlab.mp4" width='100%' controls preload="none"></video>
     </div>
 </div>
