--- a/events/templates/event_card.html
+++ b/events/templates/event_card.html
@@ -1,5 +1,5 @@
 {% load formatting %}
-<div class="col-sm-6 col-md-3">
+<div class={% if event_page %}"col-sm-6 col-md-3"{% else %}""{% endif %}>
   <div class="panel panel-default event-card">
     <div class="panel-heading">
       <div class="row">
@@ -17,7 +17,7 @@
         </div>
         <div class="col-xs-10">
             <h4>
-              <a href="{% url "view_event" event.id %}">
+              <a href="{% url "view_event" event.id %}" style=" word-wrap: break-word">
                 {{ event.title }}
               </a>
               <a href="#event-{{event.id}}-description" title="En savoir plus"
@@ -28,7 +28,7 @@
         </div>
       </div>
     </div>
-    <div id="event-{{event.id}}-description" class="panel-body collapse">
+    <div id="event-{{event.id}}-description" class="panel-body collapse" style="word-wrap: break-word">
       {{event.description|markdown}}
       {% if request.user.is_authenticated %}
       <a class="btn btn-default" href="{% url "edit_event" event.id %}">
