--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -146,9 +146,8 @@
                 <img src="/static/img/small-urlab.png" style="height: 1em;">
                 UrLab</a> — Code on <a href="http://github.com/UrLab/incubator">GitHub</a>
             — <a href="/api">We haz an API</a>
-            — <a href="http://cerkinfo.be">
             <img style="height: 1.0em;" src="/static/img/small-ci.png">
-            Cerkinfo </a> —
+            Cerkinfo —
 
             ULB — Scientia vincere tenebras
         </p>
