--- a/wiki/templates/article_detail.html
+++ b/wiki/templates/article_detail.html
@@ -7,18 +7,50 @@
 {% endblock %}
 
 {% block content %}
-<ol class="breadcrumb">
-  <li><a href="/">UrLab</a></li>
-  <li><a href="{% url "wiki_home" %}">wiki</a></li>
-  <li class="active">{{article.title}}</li>
-</ol>
 
-    <h1>
-        {{article.title}}
-        <a class="btn btn-default" href="{% url "edit_article" article.id %}">
-            <span class="fa fa-edit" aria-hidden="true"></span>
-            Editer
-        </a>
-    </h1>
-{{article.content|markdown}}
+    <ol class="breadcrumb">
+      <li><a href="/">UrLab</a></li>
+      <li><a href="{% url "wiki_home" %}">wiki</a></li>
+      <li class="active">{{article.title}}</li>
+    </ol>
+
+    <ul class="nav nav-tabs" id="article-menu">
+        <li class="pull-left">
+            <h1>{{article.title}}</h1>
+        </li>
+        <li class="pull-right" role="presentation">
+            <a href="#tab-old" class="pull-right" data-toggle="tab">
+                <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+                <span class="hidden-xs">Historique</span>
+            </a>
+        </li>
+        <li class="pull-right" role="presentation">
+            <a href="{% url "edit_article" article.id %}" class="external" class="pull-right">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                <span class="hidden-xs">Éditer</span>
+            </a>
+        </li>
+        <li class="active pull-right" role="presentation">
+            <a href="#tab-current" class="pull-right" data-toggle="tab">
+                <span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>
+                <span class="hidden-xs">Article</span>
+            </a>
+        </li>
+    </ul>
+
+
+    <div id="my-tab-content" class="tab-content">
+        <div class="tab-pane active" id="tab-current">
+            {{article.content|markdown}}
+        </div>
+        <div class="tab-pane" id="tab-old">
+            {% for revision in article.history.all %}
+                <div class="revision">
+                    {% include "revision.html" %}
+                </div>
+            {% endfor %}
+
+        </div>
+    </div>
+
 {% endblock %}
