--- a/projects/templates/project_card.html
+++ b/projects/templates/project_card.html
@@ -1,3 +1,10 @@
+<style>
+  h3 {
+    width: 220px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+</style>
 <div class="col-sm-6 col-md-3">
   <div class="thumbnail">
     <a href="{% url "view_project" project.id %}">
