--- a/events/templates/event_card.html
+++ b/events/templates/event_card.html
@@ -1,10 +1,3 @@
-<style>
-  h4 {
-    width: 220px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-</style>
 {% load formatting %}
 <div class="col-sm-6 col-md-3">
   <div class="thumbnail">
@@ -16,7 +9,7 @@
     {% endif %}
     </a>
     <div class="caption">
-      <h4 class="row-fluid">
+      <h4 class="row-fluid project-card-title">
           {{ event.title }}
       </h4>
       <p class="row-fluid text-center"  style="height: 5em" >
