--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -55,6 +55,7 @@
                         {% include "event_card.html" %}
                     {% endfor %}
                 </div>
+                <div class="clearfix"></div>
                 {% empty %}
                 Mamamia ! Il n'y a rien de prévu dans le futur ! Vite, <a href="{% url "add_event" %}">crée un événement</a> !
               {% endfor %}
@@ -89,6 +90,7 @@
                         {% include "event_card.html" %}
                     {% endfor %}
                 </div>
+                <div class="clearfix"></div>
                 {% empty %}
                 <p>Il n'y a aucun événement passé, future is NOW !</p>
             {% endfor %}
@@ -107,6 +109,7 @@
                         {% include "event_card.html" %}
                     {% endfor %}
                 </div>
+                <div class="clearfix"></div>
                 {% empty %}
                 <p>Il n'y a aucun événement passé, future is NOW !</p>
             {% endfor %}
