rename projet-car-title in card-title

--- a/events/templates/event_card.html
+++ b/events/templates/event_card.html
@@ -9,7 +9,7 @@
     {% endif %}
     </a>
     <div class="caption">
-      <h4 class="row-fluid project-card-title">
+      <h4 class="row-fluid card-title">
           {{ event.title }}
       </h4>
       <p class="row-fluid text-center"  style="height: 5em" >
