fix event's home

--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -50,6 +50,7 @@
                         {% include "project_card.html" %}
                     {% endfor %}
                 </div>
+                <div class="clearfix"></div>
             {% endfor %}
             <div class="panel panel-success">
                 <div class="panel-heading">
@@ -78,6 +79,7 @@
                         {% include "project_card.html" %}
                     {% endfor %}
                 </div>
+                <div class="clearfix"></div>
             {% endfor %}
         </div>
         <div class="tab-pane" id="tab-proposition">
@@ -91,6 +93,7 @@
                         {% include "project_card.html" %}
                     {% endfor %}
                 </div>
+                <div class="clearfix"></div>
             {% endfor %}
 
         </div>
