--- a/events/templates/event_card.html
+++ b/events/templates/event_card.html
@@ -1,44 +1,27 @@
 {% load formatting %}
-<div class={% if event_page %}"col-sm-6 col-md-3"{% else %}""{% endif %}>
-  <div class="panel panel-default event-card">
-    <div class="panel-heading">
-      <div class="row">
-        <div class="col-xs-2">
-          <a href="{% url "view_event" event.id %}">
-            {% if not event.picture %}
-              <img class="event-pic-thumb"
-                 alt="Image manquante"
-                 src="/static/img/default-event.png">
-            {% else %}
-              <img class="event-pic-thumb"
-                 src="{{event.picture.url}}">
-            {% endif %}
-          </a>
-        </div>
-        <div class="col-xs-10">
-            <h4>
-              <a href="{% url "view_event" event.id %}" style=" word-wrap: break-word">
-                {{ event.title }}
-              </a>
-              <a href="#event-{{event.id}}-description" title="En savoir plus"
-                 data-toggle="collapse" class="collapsed">
-                <i class="fa fa-plus"></i>
-              </a>
-            </h4>
-        </div>
-      </div>
-    </div>
-    <div id="event-{{event.id}}-description" class="panel-body collapse" style="word-wrap: break-word">
-      {{event.description|markdown}}
+<div class="col-sm-6 col-md-3">
+  <div class="thumbnail">
+    <a href="{% url "view_event" event.id %}">
+    {% if not event.picture %}
+      <img src="/static/img/default-event.png" style="height: 15em; width:100%; object-fit: cover;">
+    {% else %}
+      <img src="{{event.picture.url}}" style="height: 15em; width:100%; object-fit: cover;">
+    {% endif %}
+    </a>
+    <div class="caption">
+      <h4 class="row-fluid card-title">
+          {{ event.title }}
+      </h4>
+      <p class="row-fluid text-center"  style="height: 5em" >
+        {% include "event_time.html" %}
+      </p>
       {% if request.user.is_authenticated %}
       <a class="btn btn-default" href="{% url "edit_event" event.id %}">
         <span class="fa fa-edit" aria-hidden="true"></span>
         Editer
       </a>
       {% endif %}
-    </div>
-    <div class="panel-footer">
-      {% include "event_time.html" %}
+
     </div>
   </div>
 </div>
