--- a/projects/templates/project_card.html
+++ b/projects/templates/project_card.html
@@ -8,7 +8,7 @@
     {% endif %}
     </a>
     <div class="caption">
-      <h3 class="row-fluid">
+      <h3 class="row-fluid card-title">
           {{ project.title }}
       </h3>
       <div class="row-fluid progress">
