--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -8,7 +8,8 @@
 
     <ol class="breadcrumb">
       <li><a href="/">UrLab</a></li>
-      <li class="active">Événements</li>
+      <li><a href="/events/">Événements</a></li>
+      <li class="active">{{ type }}</li>
     </ol>
 
     <ul class="nav nav-tabs" id="article-menu">
@@ -20,20 +21,36 @@
 
         </li>
 
-        <li class="pull-right" role="presentation">
-            <a href="#tab-past" class="pull-right" data-toggle="tab">
+        {% if type == "past" %}
+          <li class="active pull-right" role="presentation">
+        {% else %}
+          <li class="pull-right" role="presentation">
+        {% endif %}
+            <a href="/events?type=past&offset=0" class="pull-right">
                 <span class="glyphicon glyphicon-leaf" aria-hidden="true"></span>
                 <span class="hidden-xs">Passé</span>
             </a>
         </li>
-        <li class="pull-right" role="presentation">
-            <a href="#tab-incubation" class="pull-right" data-toggle="tab">
+
+
+        {% if type == "incubation" %}
+          <li class="active pull-right" role="presentation">
+        {% else %}
+          <li class="pull-right" role="presentation">
+        {% endif %}
+            <a href="/events?type=incubation&offset=0" class="pull-right"> <!-- Pour incrementer le off et pas mettre 10 if On verra plus tard dans les bouttons mais c'est ce que je fais | Regarde Django template language-->
                 <span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>
                 <span class="hidden-xs">En incubation</span>
             </a>
         </li>
-        <li class="active pull-right" role="presentation">
-            <a href="#tab-futur" class="pull-right" data-toggle="tab">
+
+
+        {% if type == "future" %}
+          <li class="active pull-right" role="presentation">
+        {% else %}
+          <li class="pull-right" role="presentation">
+        {% endif %}
+            <a href="/events?type=future&offset=0" class="pull-right" >
                 <span class="glyphicon glyphicon-record" aria-hidden="true"></span>
                 <span class="hidden-xs">Futur</span>
             </a>
@@ -47,73 +64,62 @@
         <div class="tab-pane active" id="tab-futur">
             <br>
             <p>
-              Vous retrouverez ici les événements à venir. Viendez ce sera bien !
+              {% if type == "future" %}
+                Vous retrouverez ici les événements à venir. Viendez ce sera bien !
+              {% endif %}
+              {% if type == "incubation" %}
+                Vous retrouverez ici tout les événemnts en incubation. C'est à dire
+                les événements que nous pensons organiser un jour mais pour lesquels
+                nous n'avons pas encore trouver de dates.
+              {% endif %}
+              {% if type == "past" %}
+                Vous retrouverez ici tout les événements passés. Sur certains vous
+                trouverez des ressources intéréssante pour en apprendre plus sur le
+                sujet si vous n'avez pas pu venir à l'événement ou aimeriez appronfondir la matière.
+              {% endif %}
             </p>
-              {% for row in future %}
-                <div class="row">
-                    {% for event in row %}
-                        {% include "event_card.html" %}
-                    {% endfor %}
-                </div>
-                <div class="clearfix"></div>
-                {% empty %}
-                Mamamia ! Il n'y a rien de prévu dans le futur ! Vite, <a href="{% url "add_event" %}">crée un événement</a> !
-              {% endfor %}
+              <div class="row">
+                  {% for event in events %}
+                      {% include "event_card.html" %}
+                  {% endfor %}
+              </div>
+              <div class="clearfix">
+              </div>
+              {% if events|length == 0 %}
+                {% if type == "future" %}
+                  Mamamia ! Il n'y a rien de prévu dans le futur ! Vite, <a href="{% url "add_event" %}">crée un événement</a> !
+                {% elif type == "past" %}
+                  Il n'y a aucun événement passé, future is NOW !
+                {% else %} <!--  essaye mtn-->
+                  Aucun évenement n'est en incubation :/
+                {% endif %}
+              {% endif %}
             <div class="panel panel-success">
                 <div class="panel-heading">
                     <h3 class="panel-title">Déjà arrivé à la fin ?</h3>
                 </div>
                 <div class="panel-body">
                     N'oublie pas d'aller voir les
-                    <a href="#tab-incubation" data-toggle="tab">
+                    {% if type == "future" or type == "past" %}
+                    <a href="/events?type=incubation&offset=0">
                         <span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>
                         événements en incubation
                     </a>
-                    et les
-                    <a href="#tab-past" data-toggle="tab">
+                    {% endif %}
+                    {% if type == "future" or type == "incubation" %}
+                    <a href="/events?type=past&offset=0"" data-toggle="tab">
                         <span class="glyphicon glyphicon-leaf" aria-hidden="true"></span>
                         événements passés
                     </a>
+                    {% endif %}
+                    {% if type == "incubation" or type == "past" %}
+                    <a href="/events?type=future&offset=0" >
+                        <span class="glyphicon glyphicon-folder-close" aria-hidden="true"></span>
+                        événements en futur
+                    </a>
+                    {% endif %}
                 </div>
             </div>
-        </div>
-        <div class="tab-pane" id="tab-incubation">
-            <br>
-            <p>
-              Vous retrouverez ici tout les événemnts en incubation. C'est à dire
-               les événements que nous pensons organiser un jour mais pour lesquels
-                nous n'avons pas encore trouver de dates.
-            </p>
-            {% for row in incubation %}
-                <div class="row">
-                    {% for event in row %}
-                        {% include "event_card.html" %}
-                    {% endfor %}
-                </div>
-                <div class="clearfix"></div>
-                {% empty %}
-                <p>Il n'y a aucun événement passé, future is NOW !</p>
-            {% endfor %}
-        </div>
-        <div class="tab-pane" id="tab-past">
-            <br>
-            <p>
-              Vous retrouverez ici tout les événements passés. Sur certains vous
-               trouverez des ressources intéréssante pour en apprendre plus sur le
-                sujet si vous n'avez pas pu venir à l'événement ou aimeriez appronfondir la matière.
-            </p>
-            {% for row in past %}
-                <div class="row">
-                    {% for event in row %}
-
-                        {% include "event_card.html" %}
-                    {% endfor %}
-                </div>
-                <div class="clearfix"></div>
-                {% empty %}
-                <p>Il n'y a aucun événement passé, future is NOW !</p>
-            {% endfor %}
-
         </div>
     </div>
     </div>
@@ -121,6 +127,27 @@
     </div>
     <div class="row">
     <div class="col-lg-11">
+    <nav aria-label="page_buton">
+      <ul class="pager">
+        {% if offset == 0 %}
+          <li class="previous disabled"><a href="" id="linkOld">Older <span aria-hidden="true">&larr;</span></a></li>
+          <li class="next"><a href="" id="linkNew">Newer <span aria-hidden="true">&rarr;</span></a></li>
+         {% elif last %}
+          <li class="previous"><a href="" id="linkOld">Older <span aria-hidden="true">&larr;</span></a></li>
+          <li class="next disabled"><a href="" id="linkNew">Newer <span aria-hidden="true">&rarr;</span></a></li>
+        {% else %}
+          <li class="previous"><a href="" id="linkOld"">Older <span aria-hidden="true">&larr;</span></a></li>
+          <li class="next"><a href="" id="linkNew">Newer <span aria-hidden="true">&rarr;</span></a></li>
+        {% endif  %}
+      </ul>
+    </nav>
+
+    <script>
+      var current_offset = {{offset}};
+      // Normalement ca suffit Y(praise the sun) Okay ca marche j'ai test NICE
+      document.getElementById("linkOld").href="/events?type={{type}}&offset=" + (current_offset-1);
+      document.getElementById("linkNew").href="/events?type={{type}}&offset=" + (current_offset+1);
+    </script>
 
     <div class="container-fluid">
             <a href="{% url "add_event" %}" class="btn btn-success pull-right">
